--- a/hm_scrapper/scrapy.cfg
+++ b/hm_scrapper/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = hm_scraper.settings
+default = hm_scrapper.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = hm_scraper
+project = hm_scrapper
